table header alignment fix for ie11

--- a/css/history.css
+++ b/css/history.css
@@ -63,6 +63,7 @@ th{
 	padding-right:5px;
     vertical-align: middle; 
     height: 30px;
+    text-align: left;   /* Needs to be done specifically for ie11 */
 }
 td{
 	padding-left:5px;
